# autostable

./: .gitignore  .gitmodules  README.md  features.py  justfile  main.py  pyproject.toml  stabilize.py  vicreg.py
autostable/: __init__.py  homography_loss.py  stab_trainer.py  vicreg_trainer.py
autostable/datasets/: __init__.py  continuous.py  sample.py
autostable/model/: encoder.py
autostable/models/: __init__.py  encoder.py  homography.py
configs/: default.yaml  default_stab.yaml  default_vicreg.yaml
configs/data/: default.yaml
configs/homography/: default.yaml
configs/loss/: default.yaml
configs/model/: default.yaml  small.yaml
configs/trainer/: default.yaml  stab.yaml  vicreg.yaml
video_pretrain/: __init__.py  dataset.py  trainer.py
video_pretrain/model/: __init__.py  backbone.py  encoder.py  model.py  projector.py  uvit.py
