
[project]
name = "video-stable-pretraining"
version = "1.0.0"
description = "Train a model to capture stable and unstable features from videos using VICRegL."
authors = [
    {name = "Pierre Pereira", email = "pierre.pereira@jolibrain.com"},
]
dependencies = [
    "vicreg-loss @ file:///${PROJECT_ROOT}/vicreg-loss",
    "torch>=2.0.1",
    "wandb>=0.15.4",
    "tqdm>=4.65.0",
    "torchinfo>=1.8.0",
    "einops>=0.6.1",
    "positional-encodings[pytorch]>=6.0.1",
    "hydra-core>=1.3.2",
]
requires-python = ">=3.10"
license = {text = "MIT"}
