
[project]
name = "video-autostable"
version = "1.0.0"
description = "Train a model to stabilize videos in an online and self supervised fashion."
authors = [
    {name = "Pierre Pereira", email = "pierre.pereira@jolibrain.com"},
]
dependencies = [
    "vicreg-loss @ file:///${PROJECT_ROOT}/vicreg-loss",
    "torch>=2.0.1",
    "tqdm>=4.65.0",
    "torchinfo>=1.8.0",
    "einops>=0.6.1",
    "positional-encodings[pytorch]>=6.0.1",
    "hydra-core>=1.3.2",
    "torchvision>=0.15.2",
    "av>=10.0.0",
    "kornia>=0.6.12",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.setuptools]
packages = ["autostable"]
